--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+dominate==2.1.17
 Flask==0.10.1
+Flask-Bootstrap==3.3.5.7
 Flask-SQLAlchemy==2.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 SQLAlchemy==1.0.12
+visitor==0.1.2
 Werkzeug==0.11.4
