--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Mako==1.0.3
 MarkupSafe==0.23
 mysqlclient==1.3.7
 python-editor==0.5
+simplejson==3.8.2
 SQLAlchemy==1.0.12
 visitor==0.1.2
 Werkzeug==0.11.4
