--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
 alembic==0.8.4
+awsebcli==3.7.3
+blessed==1.9.5
+botocore==1.4.1
+cement==2.4.0
+colorama==0.3.3
+docker-py==1.1.0
+dockerpty==0.3.4
+docopt==0.6.2
+docutils==0.12
 dominate==2.1.17
 Flask==0.10.1
 Flask-Bootstrap==3.3.5.7
@@ -8,11 +17,20 @@ Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 itsdangerous==0.24
 Jinja2==2.8
+jmespath==0.9.0
 Mako==1.0.3
 MarkupSafe==0.23
 mysqlclient==1.3.7
+pathspec==0.3.3
+python-dateutil==2.5.0
 python-editor==0.5
+PyYAML==3.11
+requests==2.6.2
 simplejson==3.8.2
+six==1.10.0
 SQLAlchemy==1.0.12
+texttable==0.8.4
 visitor==0.1.2
+wcwidth==0.1.6
+websocket-client==0.35.0
 Werkzeug==0.11.4
